I added handling arguments from the main method

--- a/TxtToXmlVisualMapCMDGameEngineConverter/TxtToXmlVisualMapCMDGameEngineConverter.csproj
+++ b/TxtToXmlVisualMapCMDGameEngineConverter/TxtToXmlVisualMapCMDGameEngineConverter.csproj
@@ -5,6 +5,10 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <ProduceReferenceAssembly>True</ProduceReferenceAssembly>
+    <GenerateDocumentationFile>False</GenerateDocumentationFile>
+    <AssemblyName>ttxvm</AssemblyName>
+    <RootNamespace>$(MSBuildProjectName.Replace(" ", "_"))</RootNamespace>
   </PropertyGroup>
 
 </Project>
